--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,25 @@ xcuserdata/
 # End of https://www.gitignore.io/api/xcode,macos,appcode
 
 \.gitignore\.save
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-1024\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-20@2x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-20@3x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-29@2x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-29@3x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-40@2x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-40@3x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-60@2x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-60@3x\.png
+
+I Am Rich/I Am Rich/Assets\.xcassets/diamond\.imageset/Contents\.json
+
+I Am Rich/I Am Rich/Assets\.xcassets/diamond\.imageset/diamond@2x\.png
