--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,5 @@ I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-60@3x\.png
 I Am Rich/I Am Rich/Assets\.xcassets/diamond\.imageset/Contents\.json
 
 I Am Rich/I Am Rich/Assets\.xcassets/diamond\.imageset/diamond@2x\.png
+
+*.png
