--- a/.gitignore
+++ b/.gitignore
@@ -125,31 +125,20 @@ xcuserdata/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
+### CocoaPods ###
+## CocoaPods GitIgnore Template
 
-# End of https://www.gitignore.io/api/xcode,macos,appcode
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a large number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
 
-\.gitignore\.save
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-1024\.png
 
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-20@2x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-20@3x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-29@2x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-29@3x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-40@2x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-40@3x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-60@2x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/AppIcon\.appiconset/Icon-60@3x\.png
-
-I Am Rich/I Am Rich/Assets\.xcassets/diamond\.imageset/Contents\.json
-
-I Am Rich/I Am Rich/Assets\.xcassets/diamond\.imageset/diamond@2x\.png
-
-*.png
+# End of https://www.gitignore.io/api/xcode,macos,appcode,cocoapods,vscode
