--- a/Todoey/Podfile
+++ b/Todoey/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '11.0'
 
 target 'Todoey' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
@@ -8,4 +8,5 @@ target 'Todoey' do
   # Pods for Todoey
   pod 'RealmSwift'
   pod 'SwipeCellKit'
+  pod 'ChameleonFramework/Swift', :git => 'https://github.com/ViccAlexander/Chameleon.git'
 end
